--- a/A_dbms/templates/dbms/report/balance_custom/top-custom.html
+++ b/A_dbms/templates/dbms/report/balance_custom/top-custom.html
@@ -1,5 +1,5 @@
 <tr>
-    <td style="padding: 0">合计</td>
+    <td style="padding: 0" align="center">合计</td>
     <td style="padding: 0" align="right">{{ c_custom_count }}</td>
     <td style="padding: 0" align="right">{{ c_credit|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ c_flow|floatformat:2 }}</td>
@@ -11,7 +11,7 @@
 </tr>
 
 <tr>
-    <td style="padding: 0">总计</td>
+    <td style="padding: 0" align="center">总计</td>
     <td style="padding: 0" align="right">{{ t_custom_count }}</td>
     <td style="padding: 0" align="right">{{ t_credit|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ t_flow|floatformat:2 }}</td>
@@ -23,7 +23,7 @@
 </tr>
 
 <tr>
-    <td style="padding: 0">占比（%）</td>
+    <td style="padding: 0" align="center">占比（%）</td>
     <td style="padding: 0" align="right">{{ r_custom_count }}</td>
     <td style="padding: 0" align="right">{{ r_credit }}</td>
     <td style="padding: 0" align="right">{{ r_flow }}</td>
