--- a/A_dbms/templates/dbms/report/balance_dun/balance-class-stage.html
+++ b/A_dbms/templates/dbms/report/balance_dun/balance-class-stage.html
@@ -9,21 +9,27 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>代偿</td>
-            <td align="right">{{ compensatory_count }}</td>
-            <td align="right">{{ compensatory_amount|floatformat:2 }}</td>
+        <tr style="padding: 0">
+            <td style="padding: 0">
+                <a target="_blank"
+                       href="{% url 'dbms:report_dun_dc_list' t_typ=kwargs.t_typ %}?tf={{ tf_r }}&tl={{ tl_r }}">
+                    代偿
+                </a>
+            </td>
+            <td style="padding: 0" align="right">{{ compensatory_count }}</td>
+            <td style="padding: 0" align="right">{{ compensatory_amount|floatformat:2 }}</td>
         </tr>
-        <tr>
-            <td>追偿费用</td>
-            <td align="right">{{ charge_count }}</td>
-            <td align="right">{{ charge_amount|floatformat:2 }}</td>
+        <tr style="padding: 0">
+            <td style="padding: 0">追偿费用</td>
+            <td style="padding: 0" align="right">{{ charge_count }}</td>
+            <td style="padding: 0" align="right">{{ charge_amount|floatformat:2 }}</td>
         </tr>
-        <tr>
-            <td>追偿回款</td>
-            <td align="right">{{ retrieve_count }}</td>
-            <td align="right">{{ retrieve_amount|floatformat:2 }}</td>
+        <tr style="padding: 0">
+            <td style="padding: 0">追偿回款</td>
+            <td style="padding: 0" align="right">{{ retrieve_count }}</td>
+            <td style="padding: 0" align="right">{{ retrieve_amount|floatformat:2 }}</td>
         </tr>
         </tbody>
     </table>
 </div>
+
