--- a/A_dbms/templates/dbms/report/list/article-table.html
+++ b/A_dbms/templates/dbms/report/list/article-table.html
@@ -51,19 +51,19 @@
                 <td style="padding: 0">{{ article.get_article_state_display }}</td>
             </tr>
         {% endfor %}
-        <tr>
-            <td colspan="2">合计</td>
-            <td>{{ article_amount_tot|floatformat:2 }}</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>{{ article_provide_tot|floatformat:2 }}</td>
-            <td>{{ article_repayment_tot|floatformat:2 }}</td>
-            <td>{{ article_balance_tot|floatformat:2 }}</td>
-            <td></td>
+        <tr style="padding: 0">
+            <td style="padding: 0" colspan="2">合计</td>
+            <td style="padding: 0">{{ article_amount_tot|floatformat:2 }}</td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0">{{ article_provide_tot|floatformat:2 }}</td>
+            <td style="padding: 0">{{ article_repayment_tot|floatformat:2 }}</td>
+            <td style="padding: 0">{{ article_balance_tot|floatformat:2 }}</td>
+            <td style="padding: 0"></td>
         </tr>
         </tbody>
     </table>
