--- a/A_dbms/templates/dbms/report/list/custom-table.html
+++ b/A_dbms/templates/dbms/report/list/custom-table.html
@@ -46,16 +46,16 @@
 
         </tbody>
         <tfoot>
-        <tr>
-            <td colspan="4">合计(户均)(万)</td>
-            <td align="right">{{ custom_credit_tot_w|floatformat:0 }}({{ custom_credit_average|floatformat:0 }})</td>
-            <td align="right">{{ custom_acount_tot_w|floatformat:0 }}({{ custom_acount_average|floatformat:0 }})</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+        <tr style="padding: 0">
+            <td style="padding: 0" align="center" colspan="4">合计(户均)(万)</td>
+            <td style="padding: 0" align="right">{{ custom_credit_tot_w|floatformat:0 }}({{ custom_credit_average|floatformat:0 }})</td>
+            <td style="padding: 0" align="right">{{ custom_acount_tot_w|floatformat:0 }}({{ custom_acount_average|floatformat:0 }})</td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0"></td>
+            <td style="padding: 0"></td>
         </tr>
         </tfoot>
     </table>
