--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-s-x-l.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-s-x-l.html
@@ -42,7 +42,7 @@
         <p><strong>十、</strong>本合同受中华人民共和国法律管辖，并依照中华人民共和国法律解释。</p>
         <p><strong>十一、</strong>有关合同的任何补充、修改等均须经甲、乙、丙三方共同协商同意，并由三方订立书面补充或修改协议。</p>
         <p><strong>十二、</strong>本合同由甲、乙、丙三方法定代表人或授权代理人签章（签字或盖章）并加盖公章后，与《{{ agree_obj.get_agree_name_display }}》同时生效。</p>
-        <p><strong>十三、</strong> ？？？如甲方代丙方履行清偿义务，甲方向丙方行使追偿权的期限为自乙方履行代偿之日起两年止。</p>
+        <p><strong>十三、</strong>如甲方代丙方履行清偿义务，甲方向丙方行使追偿权的期限为自乙方履行代偿之日起两年止。</p>
         <p><strong>十四、通知送达条款</strong></p>
         <div>{% include 'dbms/agree/agree_board/counter/_c/16-notify-1.html' %}</div>
         <p><strong>十五、</strong>本合同各方同意并不可撤销地授权甲方将各方的名称、注册地址等信息、及各方在本合同项下业务活动和履约活动中形成的交易记录、信用信息、以及不良信息（包括未按照本合同履行义务的信息、人民法院判决或者裁定本机构履行义务以及强制执行的信息以及法律、法规规定的其他不良信息），报送给中国人民银行征信系统和其他依法设立的信用信息数据库，并允许相关信息被合法查询。甲方也有权为本合同订立和履行之目的，通过中国人民银行征信系统和其他依法设立的信用信息数据库查询各方的相关信息。</p>
