--- a/A_dbms/templates/dbms/report/balance_article/article-class.html
+++ b/A_dbms/templates/dbms/report/balance_article/article-class.html
@@ -1,5 +1,5 @@
 <tr>
-    <td style="padding: 0" colspan="2">合计</td>
+    <td style="padding: 0" align="center" colspan="2">合计</td>
     <td style="padding: 0" align="right">{{ article_count }}</td>
     <td style="padding: 0" align="right">{{ article_renewal|floatformat:2 }}</td>
     <td style="padding: 0" align="right">{{ article_augment|floatformat:2 }}</td>
