--- a/A_dbms/templates/dbms/report/list/dun-dc-list-1.html
+++ b/A_dbms/templates/dbms/report/list/dun-dc-list-1.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
-        <caption>代偿明细表（{{ t_typ_this }}：{{ tf_r }}至{{ tl_r }}）</caption>
+        <caption>{{PAGE_TITLE}}（{{ t_typ_this }}：{{ tf_r }}至{{ tl_r }}）</caption>
         <thead>
         <tr style="text-align: center">
             <th>委托合同</th>
@@ -42,5 +42,4 @@
         </tr>
         </tfoot>
     </table>
-    {% include 'dbms/board/page.html' %}
 </div>
