--- a/A_dbms/templates/dbms/report/list/article-table.html
+++ b/A_dbms/templates/dbms/report/list/article-table.html
@@ -52,7 +52,7 @@
             </tr>
         {% endfor %}
         <tr style="padding: 0">
-            <td style="padding: 0" colspan="2">合计</td>
+            <td style="padding: 0" align="center" colspan="2">合计</td>
             <td style="padding: 0">{{ article_amount_tot|floatformat:2 }}</td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
