--- a/A_dbms/templates/dbms/provide/notify/scan/notify-summry-body.html
+++ b/A_dbms/templates/dbms/provide/notify/scan/notify-summry-body.html
@@ -19,9 +19,9 @@
 {#<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">#}
 {#    合同状态：{{ agree_obj.get_agree_state_display }}</label>#}
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    通知总额：{{ agree_obj.agree_notify_sum }}</label>
-<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     通知金额：{{ notify_obj.notify_money }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    通知期限：{{ notify_obj.time_limit }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     借款合同：{{ notify_obj.contracts_lease }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
