--- a/A_dbms/templates/dbms/provide/provide-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-scan.html
@@ -14,7 +14,10 @@
         {% include 'dbms/provide/modl/track-del-mod.html' %}
         {% include 'dbms/dun/modl/compensatory-add-mod.html' %}
 
+        {% include 'dbms/provide/modl/extension-add-mod.html' %}
+
         {% include 'dbms/provide/modl/provide-state-change-mod.html' %}
+
 
     </div>
 {% endblock %}
@@ -28,4 +31,5 @@
     {% include 'dbms/dun/extra/js-compensatory-add.html' %}
 
     {% include 'dbms/provide/extra/js-provide-state-change.html' %}
+    {% include 'dbms/provide/extra/js-provide-extension.html' %}
 {% endblock %}
