--- a/A_dbms/templates/dbms/provide/modl/mod_form/notify-edit.html
+++ b/A_dbms/templates/dbms/provide/modl/mod_form/notify-edit.html
@@ -13,6 +13,13 @@
         <label id="e_contract_guaranty" class="pull-right">{{ form_notify_edit.contract_guaranty.errors }}</label>
     </div>
 
+    <div class="form-group"><!--期限-->
+        <label for="id_time_limit"
+               class="col-sm-3 control-label">{{ form_notify_edit.time_limit.label }}：</label>
+        <div class="col-sm-9">{{ form_notify_edit.time_limit }}</div>
+        <label id="e_time_limit" class="pull-right">{{ form_notify_edit.time_limit.errors }}</label>
+    </div>
+
     <div class="form-group"><!--合同备注-->
         <label for="id_remark" class="col-sm-3 control-label">{{ form_notify_edit.remark.label }}：</label>
         <div class="col-sm-9">{{ form_notify_edit.remark }}</div>
