--- a/A_dbms/templates/dbms/article/article-scan.html
+++ b/A_dbms/templates/dbms/article/article-scan.html
@@ -12,6 +12,7 @@
         {% include 'dbms/article/modl/article-sub-mod.html' %}
 
         {% include 'dbms/article/modl/opinion-add-mod.html' %}
+        {% include 'dbms/article/modl/article-state-change-mod.html' %}
 
         {% include 'dbms/appraisal/modl/comment-add-mod.html' %}
         {% include 'dbms/appraisal/modl/supply-add-mod.html' %}
@@ -39,6 +40,8 @@
     {% include 'dbms/article/extra/js-article-del.html' %}
     {% include 'dbms/article/extra/js-feedback-add.html' %}
     {% include 'dbms/article/extra/js-article-sub.html' %}
+
+    {% include 'dbms/article/extra/js-article-state-change.html' %}
 
     {% include 'dbms/article/extra/js-opinion-add.html' %}
 
