--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-sign-y.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-sign-y.html
@@ -70,13 +70,13 @@
                 {% include 'dbms/agree/agree_board/sign-date.html' %}
                 {#(41, '车辆')#}
             {% elif warrant.warrant_typ == 41 %}
-                {% if warrant.stock_warrant.stock_owner.genre == 1 %}
+                {% if warrant.vehicle_warrant.vehicle_owner.genre == 1 %}
                     <p>乙方（公章或合同专用章）：<strong><u>{{ warrant.vehicle_warrant.vehicle_owner.name }}</u></strong></p>
                     <p>法定代表人（或授权代理人）：<strong><u>{{ warrant.vehicle_warrant.vehicle_owner.company_custome.representative }}</u></strong></p>
                     <p>（签字或盖章）</p>
                     {% include 'dbms/agree/agree_board/sign-date.html' %}
-                {% elif warrant.stock_warrant.stock_owner.genre == 2 %}
-                    <p>乙方（公章或合同专用章）：<strong><u>{{ warrant.vehicle_warrant.vehicle_owner.company_custome.representative }}</u></strong></p>
+                {% elif warrant.vehicle_warrant.vehicle_owner.genre == 2 %}
+                    <p>乙方（公章或合同专用章）：<strong><u>{{ warrant.vehicle_warrant.vehicle_owner.name }}</u></strong></p>
                     <p>（本人或授权代理人签字）</p>
                     {% include 'dbms/agree/agree_board/sign-date.html' %}
                 {% endif %}
