--- a/A_dbms/templates/dbms/agree/agree-scan.html
+++ b/A_dbms/templates/dbms/agree/agree-scan.html
@@ -14,6 +14,9 @@
         {% include 'dbms/agree/modl/agree-sign-mod.html' %}
         {% include 'dbms/agree/modl/result-add-mod.html' %}
         {% include 'dbms/agree/modl/result-del-mod.html' %}
+
+        {% include 'dbms/agree/modl/promise-add-mod.html' %}
+
     </div>
 {% endblock %}
 
