--- a/A_dbms/templates/dbms/agree/scan/agree-summry.html
+++ b/A_dbms/templates/dbms/agree/scan/agree-summry.html
@@ -9,6 +9,7 @@
                href="{% url 'dbms:agree_sign_preview' agree_id=agree_obj.id %}">审签表</a>
             <a class="btn btn-primary btn-sm " id="addCounterB">添加反担保</a>
             <a class="btn btn-primary btn-sm " id="addResultB">生成决议</a>
+            <a class="btn btn-primary btn-sm " id="addPromiseB">添加承诺</a>
             <a class="btn btn-primary btn-sm " id="signAgreeB">签批</a>
             <a class="btn btn-primary btn-sm " id="editAgreeB">修改</a>
             <a class="btn btn-primary btn-sm " id="delAgreeB">删除</a>
