--- a/A_dbms/templates/dbms/agree/agree_board/sign-approval-db.html
+++ b/A_dbms/templates/dbms/agree/agree_board/sign-approval-db.html
@@ -23,7 +23,7 @@
                 {% for custom in counter.assure_counter.custome.all %}
                     ({{ custom }}
                     {% if custom.person_custome.spouses %}
-                        、{{ custom.person_custome.spouses.name }}夫妇
+                        、{{ custom.person_custome.spouses.name }}
                     {% endif %}
                     )
                 {% endfor %}
@@ -37,7 +37,7 @@
                 {% for custom in counter.assure_counter.custome.all %}
                     ({{ custom }}
                     {% if custom.person_custome.spouses %}
-                        、{{ custom.person_custome.spouses.name }}夫妇
+                        、{{ custom.person_custome.spouses.name }}
                     {% endif %}
                     )
                 {% endfor %}
@@ -65,15 +65,15 @@
     {% for result in result_list %}
         {% if forloop.first %}
             <tr>
-                <td align="center" rowspan="{{ result_count }}">声明</td>
-                <td align="center">{{ result.get_result_typ_display }}({{ result.custom.name }})</td>
+                <td align="center" rowspan="{{ result_count }}">声明/决议</td>
+                <td align="center">{{ result.get_result_typ_display }}({{ result.custom.short_name }})</td>
                 <td align="center" colspan="3"></td>
                 <td align="center">{{ result.counter_copies }}2份</td>
             </tr>
         {% else %}
             <tr>
-                <td align="center">{{ result.get_result_typ_display }}({{ result.custom.name }})</td>
-                <td align="center" colspan="3">{{ result.counter_num }}</td>
+                <td align="center">{{ result.get_result_typ_display }}({{ result.custom.short_name }})</td>
+                <td align="center" colspan="3"></td>
                 <td align="center">{{ result.counter_copies }}2份</td>
             </tr>
         {% endif %}
