--- a/A_dbms/templates/dbms/agree/agree-scan.html
+++ b/A_dbms/templates/dbms/agree/agree-scan.html
@@ -28,4 +28,7 @@
     {% include 'dbms/agree/extra/js-agree-sign.html' %}
     {% include 'dbms/agree/extra/js-result-add.html' %}
     {% include 'dbms/agree/extra/js-result-del.html' %}
+
+    {% include 'dbms/agree/extra/js-promise-add.html' %}
+
 {% endblock %}
