--- a/A_dbms/templates/dbms/agree/modl/mod_form/promise-add.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/promise-add.html
@@ -1,12 +1,19 @@
 <div id="form_promise_add">
-    <div class="form-group"><!--银行id-->
-        <label for="id_branch" class="col-sm-3 control-label">{{ form_promise_add.branch.label }}：</label>
-        <div class="col-sm-9">{{ form_promise_add.branch }}</div>
-        <label id="e_branch" class="pull-right">{{ form_promise_add.branch.errors }}</label>
+    <div class="form-group"><!--决议类型-->
+        <label for="id_result_typ" class="col-sm-3 control-label">{{ form_promise_add.result_typ.label }}：</label>
+        <div class="col-sm-9">{{ form_promise_add.result_typ }}</div>
+        <label id="e_result_typ" class="pull-right">{{ form_promise_add.result_typ.errors }}</label>
     </div>
-    <div class="form-group"><!--合同类型-->
-        <label for="id_agree_typ" class="col-sm-3 control-label">{{ form_promise_add.agree_typ.label }}：</label>
-        <div class="col-sm-9">{{ form_promise_add.agree_typ }}</div>
-        <label id="e_agree_typ" class="pull-right">{{ form_promise_add.agree_typ.errors }}</label>
+
+    <div class="form-group"><!--企业名称-->
+        <label for="id_custom" class="col-sm-3 control-label">{{ form_promise_add.branch.label }}：</label>
+        <div class="col-sm-9">{{ form_promise_add.branch }}</div>
+        <label id="e_custom" class="pull-right">{{ form_promise_add.branch.errors }}</label>
+    </div>
+
+    <div class="form-group"><!--决议内容-->
+        <label for="id_result_detail" class="col-sm-3 control-label">{{ form_promise_add.result_detail.label }}：</label>
+        <div class="col-sm-9">{{ form_promise_add.result_detail }}</div>
+        <label id="e_result_detail" class="pull-right">{{ form_promise_add.result_detail.errors }}</label>
     </div>
 </div>
