--- a/A_dbms/templates/dbms/agree/modl/promise-add-mod.html
+++ b/A_dbms/templates/dbms/agree/modl/promise-add-mod.html
@@ -1,14 +1,13 @@
-<div class="modal fade" id="editAgreeModal" tabindex="-1"
-     role="dialog" aria-labelledby="editAgreeModal">
+<div class="modal fade" id="promiseAddModal" tabindex="-1"
+     role="dialog" aria-labelledby="promiseAddModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="editAgreeModalLabel">修改委托保证合同：{{ agree_obj.agree_num }}</h4>
-                <input style="display: none" name="agree_id" value="{{ agree_obj.id }}">
-                <input style="display: none" name="agree_typ_n" id="id_agree_typ_n" value={{ agree_obj.agree_typ }}>
+                <h4 class="modal-title" id="promiseAddModalLabel">添加声明/承诺：{{ agree_obj.agree_num }}</h4>
+                <input style="display: none" name="agree_id" id="id_agree_id" value="{{ agree_obj.id }}">
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
@@ -18,7 +17,7 @@
             <label id="formErrors"></label>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="editAgreeModalOk">确定</button>
+                <button type="button" class="btn btn-primary" id="promiseAddModalOk">确定</button>
             </div>
         </div>
     </div>
