--- a/A_dbms/templates/dbms/agree/agree_board/sign-approval-db.html
+++ b/A_dbms/templates/dbms/agree/agree_board/sign-approval-db.html
@@ -11,7 +11,7 @@
     <td align="center">{{ credit_term_cn }}</td>
 </tr>
 <tr>
-    <td align="center" rowspan="{{ counter_count }}">合同</td>
+    <td align="center" rowspan="{{ counter_count }}">合同/协议</td>
     <td align="center">{{ agree_obj.get_agree_name_display }}</td>
     <td align="center" colspan="3">{{ agree_obj.agree_num }}</td>
     <td align="center">{{ agree_obj.agree_copies }}份</td>
