--- a/A_dbms/templates/dbms/provide/notify_show/fdd.html
+++ b/A_dbms/templates/dbms/provide/notify_show/fdd.html
@@ -26,7 +26,7 @@
 
     <tr>
         <td class="bb arg-bn" colspan="6" style="line-height: 25pt">
-            审核材料：□贷款调查报告、□贷款项目评审意见书、□贷款审批表、□合同用印审批表、□借款和抵押合同原件、□抵押物房产证原件和他项权证原件、□抵押查档信息、□评估报告原件、□借款人和抵押人身份征复印件、□户口簿复印件、<br>□结婚证或离婚证复印件（如有）
+            审核材料：□贷款调查报告、□贷款项目评审意见书、□贷款审批表、□合同用印审批表、□借款和抵押合同原件、□抵押物房产证原件和他项权证原件、□抵押查档信息、□评估报告原件、□借款人和抵押人身份征复印件、□户口簿复印件、<br>□征信、□结婚证或离婚证复印件（如有）
         </td>
     </tr>
     <tr>
