--- a/A_dbms/templates/dbms/provide/provide-notify-show.html
+++ b/A_dbms/templates/dbms/provide/provide-notify-show.html
@@ -13,8 +13,10 @@
             {% include 'dbms/provide/notify_show/dbd.html' %}
         {% elif notify_obj.agree.lending.summary.product.name == '过桥贷' %}
             {% include 'dbms/provide/notify_show/gqd.html' %}
+        {% elif notify_obj.agree.lending.summary.product.name == '流贷' %}
+            {% include 'dbms/provide/notify_show/ld.html' %}
         {% else %}
-
+            ？？？？？
         {% endif %}
     </div>
 {% endblock %}
