--- a/A_dbms/templates/dbms/agree/modl/mod_form/promise-add.html
+++ b/A_dbms/templates/dbms/agree/modl/mod_form/promise-add.html
@@ -1,14 +1,22 @@
 <div id="form_promise_add">
+    <div class="form-group"><!--产权人-->
+        <label for="id_custom" class="col-sm-3 control-label">{{ form_promise_add.custom.label }}：</label>
+        <div class="col-sm-9">
+            <select name="custom" id="id_custom" required="" class="form-control">
+                <option value="" selected="">---------</option>
+                {{ custom_list_w }}
+                {% for custom in custom_list_w %}
+                    <option value="{{ custom.id }}">{{ custom.name }}</option>
+                {% endfor %}
+            </select>
+        </div>
+        <label id="e_custom" class="pull-right">{{ form_promise_add.custom.errors }}</label>
+    </div>
+
     <div class="form-group"><!--决议类型-->
         <label for="id_result_typ" class="col-sm-3 control-label">{{ form_promise_add.result_typ.label }}：</label>
         <div class="col-sm-9">{{ form_promise_add.result_typ }}</div>
         <label id="e_result_typ" class="pull-right">{{ form_promise_add.result_typ.errors }}</label>
-    </div>
-
-    <div class="form-group"><!--企业名称-->
-        <label for="id_custom" class="col-sm-3 control-label">{{ form_promise_add.branch.label }}：</label>
-        <div class="col-sm-9">{{ form_promise_add.branch }}</div>
-        <label id="e_custom" class="pull-right">{{ form_promise_add.branch.errors }}</label>
     </div>
 
     <div class="form-group"><!--决议内容-->
